Fixed blog layout and added extra checks for archive year/month listing. There was a zoominfo bot that was adding text/javascript to the end of the url string and causing PHP to break on dateformat

--- a/layouts/default/layout.css
+++ b/layouts/default/layout.css
@@ -129,6 +129,11 @@ header span.title {
 	max-width: 100%;
 }
 
+#content dl.wide {
+	width: auto;
+	max-width: 100%;
+}
+
 #content article.page form.wide {
 	width: 100%;
 	max-width: 100%;
